[gd_scene load_steps=5 format=3 uid="uid://cec5tlyn3ml5a"]

[ext_resource type="Theme" uid="uid://c1es3kuofv7rt" path="res://resources/default_ui_theme.tres" id="1_1ce1p"]
[ext_resource type="Script" path="res://bulletins/pause_menu.gd" id="1_fh4ar"]

[sub_resource type="InputEventKey" id="InputEventKey_8sovh"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_saadc"]
events = [SubResource("InputEventKey_8sovh")]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fh4ar")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1ce1p")
theme_override_constants/separation = 16
alignment = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
shortcut = SubResource("Shortcut_saadc")
shortcut_in_tooltip = false
text = "Resume"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "Return to Main Menu"

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
